--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -327,6 +327,12 @@
   .h-full {
     height: 100%;
   }
+  .min-h-25 {
+    min-height: calc(var(--spacing) * 25);
+  }
+  .min-h-100 {
+    min-height: calc(var(--spacing) * 100);
+  }
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
