--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -567,6 +567,9 @@
   .border-gray-400 {
     border-color: var(--color-gray-400);
   }
+  .border-gray-500 {
+    border-color: var(--color-gray-500);
+  }
   .border-gray-950 {
     border-color: var(--color-gray-950);
   }
