--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -426,6 +426,9 @@
   .min-h-full {
     min-height: 100%;
   }
+  .min-h-screen {
+    min-height: 100vh;
+  }
   .w-0 {
     width: calc(var(--spacing) * 0);
   }
@@ -455,6 +458,9 @@
   }
   .min-w-full {
     min-width: 100%;
+  }
+  .\!flex-1 {
+    flex: 1 !important;
   }
   .flex-1 {
     flex: 1;
