--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -359,6 +359,9 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
+  }
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
@@ -808,6 +811,9 @@
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
+  }
+  .text-outline-white {
+    -webkit-text-stroke: 2px white;
   }
   .hover\:bg-blue-50 {
     &:hover {
